name:                animated-dangerzone
version:             0.1.0.0
synopsis:            Game
license:             BSD3
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable ad-server
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Server.hs
  other-extensions:    TemplateHaskell
  build-depends:       base >=4.6 && <4.7,
                       network >=2.4 && <2.5,
                       containers >=0.5 && <0.6,
                       binary >=0.5,
                       networked-game,
                       lens

executable ad-client
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             Client.hs
  other-extensions:    TemplateHaskell
  build-depends:       base >=4.6 && <4.7,
                       network >=2.4 && <2.5,
                       containers >=0.5 && <0.6,
                       binary >=0.5,
                       vty,
                       networked-game,
                       lens

executable ad-glossclient
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             GlossClient.hs
  ghc-options:         -Wall
  other-extensions:    TemplateHaskell
  build-depends:       base >=4.6 && <4.7,
                       network >=2.4 && <2.5,
                       containers >=0.5 && <0.6,
                       binary >=0.5,
                       gloss,
                       gloss-juicy >= 0.1.2,
                       networked-game,
                       lens,
                       text
